# Rayminder

./: CMakeLists.txt  LICENSE  Makefile  README.md
include/glad/: glad.h
src/: main.cpp  main.txt
